@@ -1,0 +1,73 @@
+<?php
+/**
+ * @package     Joomla.Libraries
+ * @subpackage  Toolbar
+ *
+ * @copyright   Copyright (C) 2005 - 2016 Open Source Matters, Inc. All rights reserved.
+ * @license     GNU General Public License version 2 or later; see LICENSE
+ */
+
+defined('JPATH_PLATFORM') or die;
+
+/**
+ * Renders a link button
+ *
+ * @since  3.0
+ */
+class JToolbarButtonLink2 extends JToolbarButton
+{
+	/**
+	 * Button type
+	 * @var    string
+	 */
+	protected $_name = 'Link2';
+
+	/**
+	 * Fetch the HTML for the button
+	 *
+	 * @param   string  $type  Unused string.
+	 * @param   string  $name  Name to be used as apart of the id
+	 * @param   string  $text  Button text
+	 * @param   string  $url   The link url
+	 *
+	 * @return  string  HTML string for the button
+	 *
+	 * @since   3.0
+	 */
+	public function fetchButton($type = 'Link2', $name = 'back', $text = '', $url = null)
+	{
+		return '<button onclick="window.open(\''.$this->_getCommand($url).'\');" '
+			.'class="btn btn-small">'
+			.'<span class="'.$this->fetchIconClass($name).'"></span> '
+			.JText::_($text).'</button>';
+	}
+
+	/**
+	 * Get the button CSS Id
+	 *
+	 * @param   string  $type  The button type.
+	 * @param   string  $name  The name of the button.
+	 *
+	 * @return  string  Button CSS Id
+	 *
+	 * @since   3.0
+	 */
+	public function fetchId($type = 'Link', $name = '')
+	{
+		return $this->_parent->getName() . '-' . $name;
+	}
+
+	/**
+	 * Get the JavaScript command for the button
+	 *
+	 * @param   object  $url  Button definition
+	 *
+	 * @return  string  JavaScript command string
+	 *
+	 * @since   3.0
+	 */
+	protected function _getCommand($url)
+	{
+		return $url;
+	}
+}
