@@ -15,6 +15,11 @@
  */
 ?>
 
+------------------------ 16.4.21 Release  [1-May-2016] ------------------------
+
+1-May-2016
+  + link2 button - window.open (build 21)
+
 ----------------------- 16.4.20 Release [23-April-2016] -----------------------
 
 20-April-2016
